ViewModelScope를 사용해서 구현

--- a/RoomEx/app/build.gradle
+++ b/RoomEx/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
 
     // Coroutine
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1")
+
+    // ViewModelScope
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
 }
